--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Git & Github testing</h1>
-    <p>this is a paragrph</p>
-    <p>dfgd</p>
+    <p>today 21/01/2026</p>
+    <p>setup github</p>
 </body>
 </html>
